# blog-pipeline

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
docs/prompts/: p-260711.md
docs/superpowers/plans/: 2026-07-11-blog-pipeline-implementation.md
docs/superpowers/specs/: 2026-07-11-blog-pipeline-design.md
n8n/: auto-blog.json  keyword-daum.json
prompts/: generate-post-prompt.md
src/blog_pipeline/: __init__.py  app.py  asgi.py  cli.py  config.py  keyword_source.py  logging_setup.py  news_collector.py  pipeline.py  post_writer.py  publisher.py  storage.py
tests/: conftest.py  test_app.py  test_config.py  test_keyword_source.py  test_news_collector.py  test_pipeline.py  test_post_writer.py  test_publisher.py  test_storage.py
