[project]
name = "blog-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ddastudio140", email = "ddastudio140@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
blog-pipeline = "blog_pipeline.cli:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
